# coursework-parse

./: .gitignore  pyproject.toml
coursework_parser/: __init__.py  functions.py
web_courseworks/: manage.py
web_courseworks/push_stud/: apps.py  models.py  views.py
web_courseworks/push_stud/migrations/: 0001_initial.py
web_courseworks/push_stud/templates/push_stud/: main.html
web_courseworks/web_courseworks/: asgi.py  settings.py  urls.py  wsgi.py
