[tool.poetry]
name = "coursework-parser"
version = "0.1.0"
description = ""
authors = ["Sharapatov Nikita <neffshar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
django = "^4.2.6"
psycopg = "^3.1.12"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
